# onr-stage3

./: .gitignore  CMakeLists.txt  README.md  build-pass.txt
KleeSE/: CMakeLists.txt  README.md  build  install-llvm.md  install-stp.md  main.cpp
KleeSE/cmake/: find_bitcode_compiler.cmake
KleeSE/examples/get_sign/: get_sign.bc  klee-last
KleeSE/examples/get_sign/klee-out-5/: all-queries.kquery  assembly.ll  info  messages.txt  run.istats  run.stats
KleeSE/include/klee/: API.h  CommandLine.h  ExecutionState.h  Helper.h  SolverStats.h  TimerStatIncrementer.h
KleeSE/include/klee/Config/: Version.h  config.h.cmin
KleeSE/include/klee/Internal/Module/: Cell.h  InstructionInfoTable.h  KInstruction.h  LLVMPassManager.h
KleeSE/include/klee/Internal/Support/: Debug.h  FloatEvaluation.h  ModuleUtil.h  Timer.h
KleeSE/include/klee/Internal/System/: Time.h
KleeSE/include/klee/util/: Assignment.h  ExprEvaluator.h  ExprPPrinter.h  ExprSMTLIBPrinter.h  GetElementPtrTypeIterator.h  PrintContext.h
KleeSE/lib/: CMakeLists.txt
KleeSE/lib/klee/: CMakeLists.txt
KleeSE/lib/klee/Basic/: CMakeLists.txt  CmdLineOptions.cpp
KleeSE/lib/klee/Core/: API.cpp  CMakeLists.txt  ExecutionState.cpp  Executor.cpp  Executor.h  ExecutorUtil.cpp  ExternalDispatcher.cpp  ExternalDispatcher.h  MemoryManager.cpp  PTree.cpp  PTree.h  Searcher.cpp  SpecialFunctionHandler.cpp  StatsTracker.cpp  TimingSolver.cpp  UserSearcher.cpp
KleeSE/lib/klee/Expr/: CMakeLists.txt  ExprPPrinter.cpp  ExprSMTLIBPrinter.cpp  Lexer.cpp  Parser.cpp
KleeSE/lib/klee/Module/: CMakeLists.txt  Checks.cpp  InstructionInfoTable.cpp  IntrinsicCleaner.cpp  KInstruction.cpp  KModule.cpp  LowerSwitch.cpp  ModuleUtil.cpp  Optimize.cpp  RaiseAsm.cpp
KleeSE/lib/klee/Solver/: CMakeLists.txt  CoreSolver.cpp
KleeSE/lib/klee/Support/: CMakeLists.txt  CompressionStream.cpp  FileHandling.cpp  Time.cpp  Timer.cpp
KleeSE/runtime/: CMakeLists.txt
KleeSE/runtime/POSIX/: selinux.c
KleeSE/runtime/Runtest/: CMakeLists.txt
KleeSE/test/Concrete/: BoolReadWrite.ll  BoolReadWrite.llvm37.ll  arith_test.ll
KleeSE/tools/kleaver/: main.cpp
KleeSE/tools/klee/: main.cpp
include/CFG/: CFG.h
include/Common/: Helper.h
include/DemoPass/: DemoPass.h
include/FSMExtractor/: FSMExtractor.h
lib/: CMakeLists.txt
lib/CFG/: CFG.cpp  CMakeLists.txt
lib/Common/: CMakeLists.txt  Helper.cpp
lib/DemoPass/: CMakeLists.txt  DemoPass.cpp
lib/FSMExtractor/: CMakeLists.txt  FSMExtractor.cpp
scripts/: build-pass.sh  clean-build.sh
stubs/demo/: test-demo.sh
stubs/openvpn/: generate-demo-figure.txt  ssl.bc  ssl.ll  test-ssl.sh
stubs/openvpn/generate-state-machine-graph/: data.js  data.json  generate_state_machines.py  index.html  index_test.html  option_config.json  states.txt
